# LightRead

./: .gitignore  LICENSE  README.md  booksources.json  index.html  package-lock.json  package.json  vite.config.ts  wrangler.jsonc
.github/workflows/: release.yml
docs/: library-okf-profile.md  产品设计.md  藏书交换格式.md
relay/: README.md  schema.sql  wrangler.toml
relay/src/: index.js
scripts/: e2e-full.mjs  e2e-smoke.mjs  perf.mjs  test-library-archive.mjs  verify-paper.mjs
scripts/corpus/: debug-one.mjs  run.mjs
src/: App.vue  main.ts  polyfills.ts  types.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: babeldoc_runner.py
src-tauri/src/: babeldoc.rs  calibre.rs  edge_tts.rs  fonts.rs  lib.rs  local_tts.rs  main.rs
src/components/: BookCard.vue  ToastHost.vue  TocList.vue
src/composables/: useReadingTimer.ts
src/i18n/: en.ts  index.ts  zh.ts
src/router/: index.ts
src/services/: ai.ts  arxiv.ts  babeldoc.ts  backup.ts  bookSearch.ts  calibre.ts  comic.ts  djvu.ts  edgeTts.ts  externalOpen.ts  fonts.ts  format.ts  githubBooks.ts  importer.ts  localTts.ts  mupdf.ts  net.ts  opds.ts  paperAI.ts  paperText.ts  paperTranslate.ts  pdfFileActions.ts  pdfium.ts  pdfjs.ts  readerTheme.ts  textToEpub.ts  toast.ts  tts.ts  updater.ts  urlImport.ts  webdav.ts
src/storage/: dexie.ts  index.ts  tauri.ts  types.ts
src/stores/: library.ts  settings.ts
src/styles/: main.css
src/views/: CatalogView.vue  DjvuReaderView.vue  LibraryView.vue  PaperReaderView.vue  ReaderView.vue  (+2 more)
