[package]
name = "lightread"
version = "1.0.6"
description = "LightRead 轻阅 — 开源本地阅读器"
authors = ["云中江树"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "lightread_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-fs = "2"
tauri-plugin-http = { version = "2", features = ["socks"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3.32"
sha2 = "0.10.9"
uuid = { version = "1.20.0", features = ["v4"] }
tokio = { version = "1.52.3", features = ["macros", "rt"] }
rusqlite = { version = "0.31", features = ["bundled"] }
fontdb = "0.23"

# 本地离线语音仅桌面平台 (sherpa-onnx 无移动端预编译库)
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
sherpa-onnx = "1.13.3"
ureq = "2"
bzip2 = "0.5.2"
tar = "0.4.46"
tauri-plugin-single-instance = "2"
